--- a/views/post.html
+++ b/views/post.html
@@ -19,15 +19,15 @@
         <h5>compilers, principles, & tools</h5>
         <ul class="nav font-weight-bold h5">
             <li class="nav-item">
-                <a class="nav-link holo-blue-dark" href="/post">posts</a>
+                <a class="nav-link gunjou-2" href="/post">posts</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link holo-blue-light" href="/archive">archives</a>
+                <a class="nav-link gunjou-5" href="/archive">archives</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link holo-blue-light" href="/about">about</a>
+                <a class="nav-link gunjou-8" href="/about">about</a>
             </li>
 
         </ul>
