--- a/views/index.html
+++ b/views/index.html
@@ -15,31 +15,34 @@
 
 <body style="padding: 16px">
     <div class="container">
-        <h1>postenuous</h1>
-        <h5>compilers, principles, & tools</h5>
-        <ul class="nav font-weight-bold h5">
-            <li class="nav-item">
-                <a class="nav-link holo-blue-dark" href="/post">posts</a>
-            </li>
+        <div class="row">
+            <div class="col">
+                <ul class="nav h5">
+                    <h5 class="no-border no-margin no-padding" style="font-weight: 600;">postenuous</h5>
+                    <li class="nav-item">
+                        <a class="nav-link gunjou-2 no-margin no-padding no-border" href="/post">posts</a>
+                    </li>
 
-            <li class="nav-item">
-                <a class="nav-link holo-blue-light" href="/archives">archives</a>
-            </li>
+                    <li class="nav-item">
+                        <a class="nav-link gunjou-4 no-margin no-padding no-border" href="/archives">archives</a>
+                    </li>
 
-            <li class="nav-item">
-                <a class="nav-link holo-blue-light" href="/about">about</a>
-            </li>
+                    <li class="nav-item">
+                        <a class="nav-link gunjou-6 no-margin no-padding no-border" href="/about">about</a>
+                    </li>
 
-            <li class="nav-item">
-                <a class="nav-link holo-green-light" data-toggle="collapse" data-target="#addpostform"
-                    aria-controls="addpostform" href="#">
-                    toggler
-                </a>
-            </li>
-        </ul>
-        <br>
+                    <li class="nav-item">
+                        <a class="nav-link gunjou-8 no-margin no-padding no-border" data-toggle="collapse"
+                            data-target="#addpostform" aria-controls="addpostform" href="#">
+                            toggler
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
     </div>
-
+    <hr>
     <div class="container">
         <div>
             <div class="collapse" id="addpostform" style="padding: 8px;">
@@ -49,7 +52,7 @@
                             <div class="input-group-prepend">
                                 <div class="input-group-text">📰</div>
                             </div>
-                        <input name="title" type="text" class="form-control" id="titlefield" placeholder="title...">
+                            <input name="title" type="text" class="form-control" id="titlefield" placeholder="title...">
                         </div>
                     </div>
                     <div class="form-group">
@@ -79,6 +82,7 @@
 
 
         <div id="posts">
+            <div class="accordion" id="postAccordion">
                 <% for(let i = 0; i < posts.length; i++) { %>
                 <div class="card post-caption">
                     <div class="card-header bg-white" id="heading_<%=i%>" style="padding: 0; border: hidden">
@@ -90,12 +94,12 @@
                         </div>
                     </div>
 
-                    <div id="post_<%=i%>" class="collapse show" aria-labelledby="heading_<%=i%>">
-                        
+                    <div id="post_<%=i%>" class="collapse" aria-labelledby="heading_<%=i%>" data-parent="">
+
                         <div class="card-body" style="padding: 0;">
                             <!--hr class="hr-compact"-->
                             <div>
-                                <a href="#" class="nav-link d-inline ">
+                                <a href="#" class="">
                                     <%= posts[i].author %>
                                 </a>
                                 <span style="color: gray;">
@@ -103,7 +107,7 @@
                                 </span>
                             </div>
                             <span>
-                                <a href="post/<%=posts[i].id%>" class="post-abstract">
+                                <a href="post/<%=posts[i].id%>" class="kuro">
                                     <%= posts[i].abstract %>
                                     <span class="holo-blue-dark">...</span>
                                 </a>
@@ -112,11 +116,11 @@
                     </div>
                 </div>
                 <% } %>
+            </div>
         </div>
-    </div>
 
-    <div class="container">
+        <div class="container">
 
-    </div>
+        </div>
 
 </body>
