--- a/views/index_collapse.html
+++ b/views/index_collapse.html
@@ -106,7 +106,7 @@
                             <span>
                                 <a href="post/<%=posts[i].id%>" class="post-abstract">
                                     <%= posts[i].abstract %>
-                                    <span class="holo-blue-dark">...</span>
+                                    <span class="holo-blue-dark">→</span>
                                 </a>
                             </span>
                         </div>
