--- a/public/style.css
+++ b/public/style.css
@@ -3,9 +3,12 @@ body {
     overflow-y: scroll;
 }
 
-
 code, pre {
-    font: Menlo, Consolas, monospace;
+    font-family: Menlo, Consolas, monospace;
+}
+
+.symbol-monospace {
+    font-family: Menlo, Consolas, monospace;
 }
 
 h1, h2, h3 {
@@ -20,7 +23,7 @@ h5 {
     font-weight: 400;
 }
 
-h1 a, h2 a, a:hover {
+h1, h2 a, a:hover {
     text-decoration: none;
 }
 
@@ -33,7 +36,7 @@ body {
 }
 
 a {
-    color: #2CB1E1;
+    color: #0099CC;
 }
 
 blockquote {
@@ -230,15 +233,13 @@ topbanner {
 .post-title {
     font-size: 1rem;
     font-weight: 600;
+    letter-spacing: -0.5px;
     padding: 0;
     border: 0;
-    font-family: 'Helvetica Neue', Helvetica, Arial, 'Toppan Bunkyu Gothic', 'YuGothic', 'Hiragino Sans', 'Noto Sans', sans-serif;
-    transition: color 0.5s;
 }
 
 .post-title:hover {
-    color: #4c6cb3;
-    text-decoration-line: none;
+    text-decoration-line: underline;
 }
 
 @keyframes enlarge-title {
@@ -253,9 +254,14 @@ topbanner {
     }
 }
 
+.sub-title{
+    font-weight: 400;
+    letter-spacing: -0.5px;
+}
+
 .post-caption {
     border-width: 0;
-    margin-bottom: 8px;
+    padding-bottom: 8px;
 }
 
 .hr-compact {
@@ -273,4 +279,21 @@ topbanner {
 
 .nav-link:hover {
     color: #33B5E5;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+.page-navigator {
+    text-decoration: underline;
+    padding: 0;
+}
+
+.letter-space-neg05 {
+    letter-spacing: -0.5px;
+}
+
+.letter-space-neg10 {
+    letter-spacing: -1px;
 }
