--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,11 @@ body {
     overflow-y: scroll;
 }
 
+.post-text {
+    font-family: "Helvetica Neue", Helvetica, "Toppan Bunkyu Mincho", "Toppan Bunkyu Gothic", "YuGothic", "Hiragino Gothic", sans-serif;
+    overflow-y: scroll;
+}
+
 code, pre {
     font-family: Menlo, Consolas, monospace;
 }
@@ -45,7 +50,6 @@ blockquote {
 
 code, pre {
     background: #f3f8fd;
-    color: #036ad3;
 }
 
 topbanner {
